<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_titles"
                    android:text="@string/title"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_directors"
                    android:text="@string/director"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_guionists"
                    android:text="@string/guionist"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_genres"
                    android:text="@string/genre"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_subgenres"
                    android:text="@string/subgenre"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/t_actors"
                    android:text="@string/actors"
                    />
            </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_title"
                android:text="@string/title"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_director"
                android:text="@string/director"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_guionist"
                android:text="@string/guionist"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_genre"
                android:text="@string/genre"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_subgenre"
                android:text="@string/subgenre"
                />
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_actor1"
                android:text="@string/actor1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_actor2"
                android:text="@string/actor2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_actor3"
                android:text="@string/actor3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/t_actor4"
                android:text="@string/actor4"
                />
        </LinearLayout>
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="horizontal">
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/b_edit"
                android:background="@mipmap/ic_update_fore"
                />
            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/b_delete"
                android:background="@mipmap/ic_delete_fore"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>